# Search_Engine

./: CMakeLists.txt  README.md  main.cpp  main_search_engine.cpp  main_spider.cpp
config/: config.cpp  config.h  config.ini
database/: database.cpp  database.h
search_engine/: search_engine.cpp  search_engine.h
spider/: spider.cpp  spider.h
